small balances and some other minor changes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,8 @@ v1.10.5
   - Reduced the economic cycle upgrade cost from 7.5% to 5%
   - Reduced the at war increase for the military expenditure by 20%
   - Positive economic events are now more likely to happen if you have a high GDP Quarterly Growth Rate
+  - Increased the Western Outlook drift from European Union by a couple points
+  - Increased the stats of Kevin O'Donoghue
 
  Bugfix:
   - Fixed the missing model errors from TOTA (added blank asset files)
@@ -27,6 +29,7 @@ v1.10.5
   - Fixed Morocco's political leaders not working
   - Fixed the HEU enrichment limitation not actually working
   - Fixed internal faction event localization
+  - Fixed the Muslim Brotherhood events spamming
 
  Content:
   - Added additional decisions to a variety of different internal factions
@@ -36,6 +39,7 @@ v1.10.5
   - Added content for the 2nd Sudanese Civil War, War in Darfur, Conflict in the Blue Nile and South Sudanese Civil War
   - Reworked political parties and leaders for Sudan, South Sudan and Darfur
   - New focus for Libya: Support South Sudan
+  - Added a failswitch that you won't get Muslim Brotherhood events if the civil war starts
 
  Database:
   - ADJUSTED PRODUCTIVITY: MIC, KOS, KAR, KAC, SHN, WAA, ABK, JUB, CHE
