--- a/localisation/english/MD_focus_RAJ_l_english.yml
+++ b/localisation/english/MD_focus_RAJ_l_english.yml
@@ -839,7 +839,7 @@
  RAJ_arjun: "ARJUN Main Battle Tank"
  RAJ_arjun_desc: "Arjun is a main battle tank developed by India's largest defense contractor, the Defence Research and Development Organization (DRDO), for the Indian Army. The tank is named after Arjun, one of the main characters of the Indian epic poem, the Mahabharata."
  RAJ_t90_rus: "Russian T90"
- RAJ_t90_rus_desc: "The Russian T-90 main battle tank was adopted into service in 1992 under the name T-90. In 1999, the tank was given the verbal name "Vladimir"
+ RAJ_t90_rus_desc: "The Russian T-90 main battle tank was adopted into service in 1992 under the name T-90. In 1999, the tank was given the verbal name 'Vladimir'"
  RAJ_british_challenger: "British Challenger"
  RAJ_british_challenger_desc: "A main battle tank produced by the British company Vickers Defense Systems (now part of BAE Systems). It is the third tank to bear the Challenger name. Although the Challenger 2 was developed on the basis of the Challenger, the new tank differs from the earlier model with new equipment and components: only 5% of the parts are common to both models. The Challenger 2 has now replaced the earlier model in service with the British Army."
  RAJ_bmp_sarath: "BMP Sarath"
