--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2,6 +2,8 @@
  germany_focus: "Germany Focus Tree"
  GER_agenda_2010: "Agenda 2010"
  GER_agenda_2010_desc: "Gerhard Schröder was always a moderate among the social democrats and thus advocated restraint with the budget. The 'Agenda 2010' is an ambitious project of budget cuts and bureaucratic reforms that will without a doubt draw heavy criticism from leftist groups and push the government towards the center - but it could be fantastic for economic progress."
+ GER_international_business: "International Business"
+ GER_international_business_desc: "Germany often hails itself \"Exportweltmeister\", 'world champion of exports'. The German economy has traditionally seen significant trade surplusses, selling far more to other industrial nations than Germany itself purchases from them. A continuation of an export-friendly policy requires great amounts of foreign political pragmatism - the money of a dictator is just as good as the money of a popular leader, after all."
 
  #Burger_Need_Coffee
  GER_Form_Daimler_Chrysler_AG: "Daimler Chrysler AG"
