--- a/localisation/english/MD_focus_LBA_l_english.yml
+++ b/localisation/english/MD_focus_LBA_l_english.yml
@@ -1157,7 +1157,7 @@
  LBA_send_mercenaries_tt_2: "If we have completed focus §Y$LBA_support_sudan$§!:\n"
  LBA_send_mercenaries_tt_3: "If we have completed focus §Y$LBA_support_south_sudan$§!:\n"
  LBA_gaddafis_dream: "Gaddafi's Dream"
- LBA_gaddafis_dream_desc: "Once he came to power, Muammar Gaddafi wanted to create the Uniter Arab States, and even did some progress with temporary unions with Tunisia and Egypt. However, after some bad blood with Arab leaders and the death of Arab nationalism, this dream seems to have crumbled. However, there are other paths Gaddafi could take..."
+ LBA_gaddafis_dream_desc: "Once he came to power, Muammar Gaddafi wanted to create the United Arab States, and even did some progress with temporary unions with Tunisia and Egypt. However, after some bad blood with Arab leaders and the death of Arab nationalism, this dream seems to have crumbled. However, there are other paths Gaddafi could take..."
  LBA_approach_algeria: "Approach Algeria"
  LBA_approach_algeria_desc: "Algeria is a long-time partner in the region. Neither of us are really fond of the West, we have struggled together against Islamists and both of us strong supporters of Sahrawi independence from Morocco. It is important we stay on good terms with Algeria."
  LBA_approach_egypt: "Approach Egypt"
