--- a/localisation/english/MD_focus_USA_l_english.yml
+++ b/localisation/english/MD_focus_USA_l_english.yml
@@ -2382,7 +2382,7 @@
  ##Microsoft Acquires Visio
  usa.4.t: "Microsoft acquires Visio"
  usa.4.d: "The massive American computer technology giant Microsoft has steadily expanded ever since its founding in 1975. Microsoft, especially dominant in the home computer markets with its Windows NT 4.0 and Windows 98 operating systems, is always looking to broaden its outreach and the amount of computer programs it controls, arguably so that they can no longer be released on non-Microsoft operating systems.\n\nOne such target for expansion is the Seattle-based Visio Corporation, whose acquisition by Microsoft was initially announced in September of 1999. Visio, which is to become the Visio Division within the Microsoft Business Productivity Group, has especially met appraisal for its programs to generate charts, graphs and other data visualization for corporate administrators, economic experts and product designers. Microsoft, which is paying 1.5 billion U.S. Dollars for the acquisition which is to be finalized on January 7th, 2000, hopes to strengthen its standing with professionals through the annexation of Visio."
- usa.4.o1: "Stronger Cooperations Means More in Taxable Revenue!"
+ usa.4.o1: "Stronger Corporations Means More in Taxable Revenue!"
  usa.4.o2: "This is a hostile takeover! Prevent it!"
 
  ##America Online Merges with Time Warner
